@startuml
skinparam linetype ortho
!define TABLE(name) class name << (T,#FFAAAA) >>
!define PK(x) <b><color:red>PK:</color> x</b>
!define FK(x) <color:blue>FK:</color> x
!define NOT_NULL(x) <color:green>x</color>

' ============================================
' NHÓM 1: USER & AUTHENTICATION
' ============================================
TABLE(users) {
  PK(id): UUID
  NOT_NULL(email): VARCHAR(255) UNIQUE
  NOT_NULL(password_hash): VARCHAR(255)
  NOT_NULL(username): VARCHAR(100)
  avatar_url: VARCHAR(500)
  NOT_NULL(created_at): TIMESTAMP
  updated_at: TIMESTAMP
  last_login: TIMESTAMP
  is_active: BOOLEAN DEFAULT TRUE
  preferences: JSONB
}

TABLE(user_settings) {
  PK(id): UUID
  FK(user_id): UUID
  theme_mode: VARCHAR(10) DEFAULT 'light'
  pomodoro_work_duration: INTEGER DEFAULT 25
  pomodoro_break_duration: INTEGER DEFAULT 5
  pomodoro_long_break_duration: INTEGER DEFAULT 15
  default_music_playlist: VARCHAR(50) NULL
  notification_enabled: BOOLEAN DEFAULT TRUE
  language: VARCHAR(10) DEFAULT 'vi'
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  UNIQUE(user_id)
}

' ============================================
' NHÓM 2: LEARNING SESSION & PROGRESS
' ============================================
TABLE(study_sessions) {
  PK(id): UUID
  FK(user_id): UUID
  session_type: VARCHAR(20)
  start_time: TIMESTAMP
  end_time: TIMESTAMP
  duration_minutes: INTEGER
  FK(goal_id): UUID NULL
  notes: TEXT
  completed: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
}

TABLE(daily_goals) {
  PK(id): UUID
  FK(user_id): UUID
  NOT_NULL(goal_date): DATE
  target_minutes: INTEGER DEFAULT 0
  target_quiz_count: INTEGER DEFAULT 0
  actual_minutes: INTEGER DEFAULT 0
  actual_quiz_count: INTEGER DEFAULT 0
  completed: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  UNIQUE(user_id, goal_date)
}


TABLE(achievements) {
  PK(id): UUID
  NOT_NULL(code): VARCHAR(50) UNIQUE
  NOT_NULL(name): VARCHAR(100)
  description: TEXT
  url: VARCHAR(300)
  active: BOOLEAN DEFAULT TRUE
}

TABLE(user_achievements) {
  PK(id): UUID
  FK(user_id): UUID
  FK(achievement_id): UUID
}

' ============================================
' NHÓM 3: NOTES & TASKS
' ============================================
TABLE(categories) {
  PK(id): UUID
  FK(user_id): UUID
  NOT_NULL(name): VARCHAR(100)
  color: VARCHAR(7) DEFAULT '#3B82F6'
  icon: VARCHAR(50) DEFAULT 'folder'
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(note_categories) {
  PK(id): UUID
  FK(user_id): UUID
  NOT_NULL(name): VARCHAR(100)
  color: VARCHAR(7) DEFAULT '#3B82F6'
  icon: VARCHAR(50) DEFAULT 'folder'
  is_default: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(notes) {
  PK(id): UUID
  FK(user_id): UUID
  FK(category_id): UUID NULL
  NOT_NULL(title): VARCHAR(255)
  content: TEXT
  is_pinned: BOOLEAN DEFAULT FALSE
  is_quick_note: BOOLEAN DEFAULT FALSE
  source_context: TEXT
  theme: VARCHAR(50) DEFAULT 'standard'
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(note_tags) {
  PK(id): UUID
  FK(note_id): UUID
  tag_name: VARCHAR(50)
  created_at: TIMESTAMP
}

TABLE(tasks) {
  PK(id): UUID
  FK(user_id): UUID
  FK(category_id): UUID NULL
  NOT_NULL(title): VARCHAR(255)
  description: TEXT
  priority: VARCHAR(10) DEFAULT 'medium'
  start_date: DATE NULL
  due_date: DATE NULL
  completed: BOOLEAN DEFAULT FALSE
  completed_at: TIMESTAMP NULL
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

' ============================================
' NHÓM 4: QUIZ & FLASHCARD
' ============================================
TABLE(quiz_sets) {
  PK(id): UUID
  FK(user_id): UUID
  FK(category_id): UUID NULL
  NOT_NULL(title): VARCHAR(255)
  description: TEXT NULL
  is_public: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(quiz_questions) {
  PK(id): UUID
  FK(quiz_set_id): UUID
  NOT_NULL(question_text): TEXT
  NOT_NULL(options): JSONB
  NOT_NULL(correct_answer_index): INTEGER
  explanation: TEXT
  order_index: INTEGER DEFAULT 0
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(quiz_attempts) {
  PK(id): UUID
  FK(user_id): UUID
  FK(quiz_set_id): UUID
  score: DECIMAL(5,2) NULL
  NOT_NULL(total_questions): INTEGER
  correct_answers: INTEGER DEFAULT 0
  time_spent_seconds: INTEGER NULL
  answers: JSONB NULL
  completed_at: TIMESTAMP NULL
  created_at: TIMESTAMP
}

TABLE(flashcard_decks) {
  PK(id): UUID
  FK(user_id): UUID
  FK(category_id): UUID NULL
  NOT_NULL(title): VARCHAR(255)
  description: TEXT NULL
  is_public: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(flashcards) {
  PK(id): UUID
  FK(deck_id): UUID
  NOT_NULL(question): TEXT
  NOT_NULL(answer): TEXT
  hint: TEXT NULL
  order_index: INTEGER DEFAULT 0
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

TABLE(flashcard_progress) {
  PK(id): UUID
  FK(user_id): UUID
  FK(flashcard_id): UUID
  confidence_level: INTEGER DEFAULT 0
  last_reviewed: TIMESTAMP NULL
  next_review: TIMESTAMP NULL
  review_count: INTEGER DEFAULT 0
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  UNIQUE(user_id, flashcard_id)
}

' ============================================
' NHÓM 5: AI CHAT & CONVERSATIONS
' ============================================
TABLE(chat_conversations) {
  PK(id): UUID
  FK(user_id): UUID
  title: VARCHAR(255) DEFAULT 'New Conversation'
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  last_message_at: TIMESTAMP NULL
}

TABLE(chat_messages) {
  PK(id): UUID
  FK(conversation_id): UUID
  NOT_NULL(role): VARCHAR(20)
  NOT_NULL(content): TEXT
  tokens_used: INTEGER DEFAULT 0
  created_at: TIMESTAMP
}

' ============================================
' NHÓM 6: CONTENT & RESOURCES
' ============================================
TABLE(quotes) {
  PK(id): UUID
  NOT_NULL(quote_text): TEXT
  author: VARCHAR(100) NULL
  category: VARCHAR(50) DEFAULT 'motivation'
  language: VARCHAR(10) DEFAULT 'vi'
  is_active: BOOLEAN DEFAULT TRUE
  created_at: TIMESTAMP
}

TABLE(music_playlists) {
  PK(id): UUID
  NOT_NULL(name): VARCHAR(100)
  description: TEXT NULL
  playlist_type: VARCHAR(50) NULL
  audio_url: VARCHAR(500) NULL
  thumbnail_url: VARCHAR(500) NULL
  duration_minutes: INTEGER NULL
  is_active: BOOLEAN DEFAULT TRUE
  created_at: TIMESTAMP
}

' ============================================
' RELATIONSHIPS
' ============================================
users ||--o{ user_settings : "has"
users ||--o{ study_sessions : "has"
users ||--o{ daily_goals : "has"
users ||--o{ user_achievements : "earns"
users ||--o{ categories : "creates"
users ||--o{ note_categories : "creates"
users ||--o{ notes : "creates"
users ||--o{ tasks : "creates"
users ||--o{ quiz_sets : "creates"
users ||--o{ quiz_attempts : "takes"
users ||--o{ flashcard_decks : "creates"
users ||--o{ flashcard_progress : "tracks"
users ||--o{ chat_conversations : "has"

categories ||--o{ tasks : "categorizes"
categories ||--o{ quiz_sets : "categorizes"
categories ||--o{ flashcard_decks : "categorizes"

note_categories ||--o{ notes : "categorizes"
notes ||--o{ note_tags : "has"

quiz_sets ||--o{ quiz_questions : "contains"
quiz_sets ||--o{ quiz_attempts : "attempted_in"

flashcard_decks ||--o{ flashcards : "contains"
flashcards ||--o{ flashcard_progress : "tracked_by"

chat_conversations ||--o{ chat_messages : "contains"

daily_goals ||--o{ study_sessions : "contributes_to"

achievements ||--o{ user_achievements : "mapped"
@enduml